k8s/backend.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-backend
  labels:
    app: laravel-backend
  namespace: unicorn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-backend
  template:
    metadata:
      labels:
        app: laravel-backend
    spec:
      containers:
        - name: laravel-backend
          image: syedkamruzzaman/uni_backend:17
        - name: nginx-backend
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-backend
              subPath: default.conf
              mountPath: /etc/nginx/conf.d/default.conf
              readOnly: true
           
      volumes:
        - name: nginx-config-backend
          configMap:
            name: nginx-config-backend
       

---
apiVersion: v1
kind: Service
metadata:
  name: laravel-backend
  namespace: unicorn
spec:
  selector:
    app: laravel-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
