k8s/mysql.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
  namespace: unicorn  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          # env:
          #   - name: MYSQL_ROOT_PASSWORD
          #     value: "secret"
          #   - name: MYSQL_DATABASE
          #     value: "laravel"
          #   - name: MYSQL_USER
          #     value: "laravel"
          #   - name: MYSQL_PASSWORD
          #     value: "secret"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysqldata
              mountPath: /var/lib/mysql
      volumes:
        - name: mysqldata
          persistentVolumeClaim:
            claimName: mysql-pvc    

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: unicorn
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306

---
