k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: unicorn
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: frontend.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
    - host: backend.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-backend
                port:
                  number: 80
